--- a/main.css
+++ b/main.css
@@ -1,37 +1,50 @@
 body {
-    background-color: #F3FFE2;
-    Margin: 0px;
+    background-image: url("trial.jpg");
+    background-position: top;
+    background-size: 100%;
+    margin: 0px;
+    background-attachment: fixed;
     }
 h1 {
-    font-family: Arial;
+    font-family: HelveticaNeueLT Std Lt, Helvetica;
     font-style: normal;
     font-size: 60px;
-    color: #225378;
+    color: solid black;
     text-align: center;
 }
 .nav {
-	background-color: #EB7F00;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+	background-color: rgba(11,11,11,0.5);
+    border-top: 2px solid darkblue;
+
     display: table;
     width: 100%;
     table-layout:fixed;
 
 }
 .nav a { 
-    color:  #1695A3;
+    color:  white;
     text-decoration: none;
-    font-size: 30px;
+    font-family: HelveticaNeueLT Std, Helvetica;
+    font-size: 28px;
     font-weight: 600;
     margin-left: 100px;
     display: table-cell;
     text-align: center;
-    border-left: 1px solid black;
-    border-right: 1px solid black; 
+   
 
 
 }
 .nav a:hover {
-    background-color: #FFE11A;
-    color: #FD7400 ;
+    background-color: rgba(90,90,90,0.5);
+    color: black ;
+}
+
+h2 {
+    font-family: Helvetica;
+    font-size: 30px;
+    margin-left: 100px;
+    font-style: normal;
+}
+.separator {
+    border: 2px solid black;
 }
