--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
 h1 {
     font-family: HelveticaNeueLT Std Lt, Helvetica;
     font-style: normal;
-    font-size: 60px;
+    font-size: 3.75em;
     color: solid black;
     text-align: center;
 }
@@ -25,9 +25,9 @@ h1 {
     color:  white;
     text-decoration: none;
     font-family: HelveticaNeueLT Std, Helvetica;
-    font-size: 28px;
+    font-size: 1.75em;
     font-weight: 600;
-    margin-left: 100px;
+    margin-left: 6.25em;
     display: table-cell;
     text-align: center;
    
@@ -41,8 +41,8 @@ h1 {
 
 h2 {
     font-family: Helvetica;
-    font-size: 30px;
-    margin-left: 100px;
+    font-size: 1.875em;
+    margin-left: 6.25em;
     font-style: normal;
 }
 .separator {
