--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ body {
     background-size: 100%;
     margin: 0px;
     background-attachment: fixed;
+    font-size: 100%
     }
 h1 {
     font-family: HelveticaNeueLT Std Lt, Helvetica;
